se incluyó angular material, inicializacion de todo el proyecto, muestra de imagenes de todos los personajes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<div>
+    <title>RICK AND MORTY API</title>
+</div>
+
+<div class="backgrd">
+    <ng-container *ngFor="let item of data">
+            <img src="{{ item.image }}" alt="imagen">
+    </ng-container>
+</div>
