--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,9 @@
 .backgrd {
-    background-color: white;
+    background-color: rgb(255, 255, 255);
+    padding: 10px;
+}
+
+.logo {
+    display: flex;
+    justify-content: center;
 }
