--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,6 +2,10 @@
     <title>RICK AND MORTY API</title>
 </div>
 
+<div class="logo">
+    <img [src]="'https://pngimg.com/uploads/rick_morty/rick_morty_PNG40.png'">
+</div>
+
 <div class="backgrd">
     <ng-container *ngFor="let item of data">
             <img src="{{ item.image }}" alt="imagen">
