--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
 
 <div class="general">
     <div class="logo">
-        <img [src]="'https://pngimg.com/uploads/rick_morty/rick_morty_PNG40.png'">
+        <img [src]="'https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/Rick_and_Morty.svg/2560px-Rick_and_Morty.svg.png'">
     </div>
     
     <div class="backgrd">
