--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,25 +4,19 @@
 
 <div class="general">
     <div class="logo">
-        <img [src]="'https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/Rick_and_Morty.svg/2560px-Rick_and_Morty.svg.png'" alt="rick and morty logo">
+        <a routerLink="/character/" class="logo">
+            <img [src]="'https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/Rick_and_Morty.svg/2560px-Rick_and_Morty.svg.png'" alt="rick and morty logo">
+        </a>
     </div>
     
     <div class="backgrd">
         <ng-container *ngFor="let item of data">
             <mat-card class="card-personajes">
                 <mat-card-header>
-                  <mat-card-title>{{item.name}}</mat-card-title>
-                  <mat-card-subtitle>Status: {{item.status}}</mat-card-subtitle>
+                  <mat-card-title style="color: #526E2DFF;">{{item.name}}</mat-card-title>
+                  <mat-card-subtitle style="color: black">Status: {{item.status}}</mat-card-subtitle>
                 </mat-card-header>
-                <img class="imagen" src="{{ item.image }}" alt="imagen">
-                <mat-card-content>
-                  <p>
-                    Specie: {{item.species}}
-                  </p>
-                  <p>
-                    Gender: {{item.gender}}
-                  </p>
-                </mat-card-content>
+                <img routerLink="/character/{{item.id}}" class="imagen" src="{{ item.image }}" alt="imagen">
               </mat-card>
         </ng-container>
     </div>
