cambio muestro en cards home, se muestra la especie en vez del estado

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,7 +14,7 @@
             <mat-card class="card-personajes">
                 <mat-card-header>
                   <mat-card-title style="color: #526E2DFF;">{{item.name}}</mat-card-title>
-                  <mat-card-subtitle style="color: black">Status: {{item.status}}</mat-card-subtitle>
+                  <mat-card-subtitle style="color: black">Species: {{item.species}}</mat-card-subtitle>
                 </mat-card-header>
                 <img routerLink="/character/{{item.id}}" class="imagen" src="{{ item.image }}" alt="imagen">
               </mat-card>
