cabecera del character con logo

--- a/src/app/character/character.component.html
+++ b/src/app/character/character.component.html
@@ -1,1 +1,15 @@
+<div>
+    <title>RICK AND MORTY API</title>
+</div>
+
+<div class="general">
+    <div class="logo">
+        <a routerLink="/character/" class="logo">
+            <img [src]="'https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/Rick_and_Morty.svg/2560px-Rick_and_Morty.svg.png'" alt="rick and morty logo">
+        </a>
+    </div>
+    <div class="backgrd">
+
+    </div>
+</div>
 <p>{{personaje.name}}</p>
