--- a/src/app/character/character.component.html
+++ b/src/app/character/character.component.html
@@ -8,8 +8,19 @@
             <img [src]="'https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/Rick_and_Morty.svg/2560px-Rick_and_Morty.svg.png'" alt="rick and morty logo">
         </a>
     </div>
-    <div class="backgrd">
 
+    <div class="backgrd">
+        <mat-card class="card-personajes">
+            <mat-card-header>
+              <mat-card-title-group>
+                <mat-card-title> {{personaje.name}} </mat-card-title>
+                <mat-card-subtitle> {{personaje.gender}} </mat-card-subtitle>
+                <img class="imagen" src="{{personaje.image}}" alt="imagen character">
+              </mat-card-title-group>
+            </mat-card-header>
+            <mat-card-content>
+                {{personaje.episode}}
+            </mat-card-content>
+          </mat-card>
     </div>
 </div>
-<p>{{personaje.name}}</p>
