card definitiva para characters

--- a/src/app/character/character.component.html
+++ b/src/app/character/character.component.html
@@ -17,6 +17,15 @@
             <img class="imagen" src="{{personaje.image}}" alt="imagen character">
             <div class="content">
                 <mat-card-content>
+                    Status: {{personaje.status}}
+                </mat-card-content>
+                <mat-card-content>
+                    Gender: {{personaje.gender}}
+                </mat-card-content>
+                <mat-card-content>
+                    Species: {{personaje.species}}
+                </mat-card-content>
+                <mat-card-content>
                     Origin: {{personaje.origin.name}}
                 </mat-card-content>
                 <mat-card-content>
