--- a/src/app/character/character.component.css
+++ b/src/app/character/character.component.css
@@ -41,3 +41,12 @@
 .info-name {
     padding: 10px;
 }
+
+.Alive {
+    background: green;
+    border-radius: 50%;
+    width: 10px;
+    height: 10px;
+    margin-top: 10px;
+    margin-right: 4px;
+}
